welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: Missing closing brace `}' assumed here
def Moria(){
^