welcome.lessons.welcome.summative.Moria.scala.code
def Moria(){
  while(!estFaceMur){
    avance()

    

}